--- a/frontend/medtrack-frontend/src/index.css
+++ b/frontend/medtrack-frontend/src/index.css
@@ -1,12 +1,15 @@
-
+/* @import "tailwindcss/preflight";
+/* @tailwind utilities; */
+/* @import "tailwindcss/utilities"; */
+@import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: light;
+  color: #242424;
+  background-color:rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,20 +19,27 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #242424;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #242424;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+} */
+ body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: #ffffff;
 }
+
 
 h1 {
   font-size: 3.2em;
@@ -67,3 +77,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
